<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My own app</string>
    <string name="action_settings">Settings</string>
    <string name="action_button_launch">This button will launch my</string>
    <string name="action_app">app</string>
    <string name="action_capstone">capstone</string>
    <string name="action_spotify">Spotify</string>
    <string name="action_library">library</string>
    <string name="action_score">score</string>
    <string name="action_buildit">build-it</string>
    <string name="action_reader">reader</string>

</resources>
